# rust-stock-hub

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 0001_schema.sql
src/: main.rs  prelude.rs
src/includes/: app_errors.rs  db.rs  mod.rs  start_web.rs
src/includes/api/: login.rs  mod.rs  response.rs
src/includes/api/categories/: add_category.rs  delete_category.rs  mod.rs  select_categories.rs  update_category.rs
src/includes/api/products/: add_form_products.rs  delete_product.rs  mod.rs  search.rs  select_products.rs  update_product.rs
src/templates/: 404.html  base_main.html  footer.html  header.html  login.html  main.html  new_category.html  new_product.html
static/css/: base_main.css  categories.css  header.css  index.css  login.css  products.css
static/js/: delete_data.js  fetch_get.js  fetch_post.js  header.js  login.js  notification_modal.js
static/js/base_main/: base_main.js  search.js
static/js/categories/: add_category.js  delete_category.js  main.js  redact_category.js  select_all_categories.js  select_in_form.js
static/js/products/: add_product.js  main.js  redact_product.js  select_all_products.js
