[package]
name = "rust-stock-hub"
version = "0.1.0"
edition = "2024"


description = "Web interface project for managing warehouse stock."
license = "MIT"
repository = "https://github.com/MaksUnweb/rust-stock-hub"
readme = "README.md"

[dependencies]
axum = { version = "0.8.8", features = ["tokio", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
tower-sessions = { version = "0.14.0"}
minijinja = "2.16.0"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.149"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
time = "0.3.47"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.3" 
argon2 = { version = "0.5.3", features = ["std"] }
